Adding a SNMP cache to batch all requests.